--- a/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
@@ -63,8 +63,11 @@
     "- $\\mathbf{x}$ is the input vector\n",
     "- $b$ is the bias\n",
     "- $\\gamma$ is the sigmoid function.\n",
+    "- $\\mathbf{z}$ is called the logit.\n",
     "\n",
-    "To implement the perceptron in PyTorch, we can create a class that inherits from `torch.nn.Module` and the define the different elements of the network in the constructor and the forward pass in the `forward` method. You can use the matrix multiplication operation `torch.matmul` to calculate the weighted sum of the inputs and the bias."
+    "To implement the perceptron in PyTorch, we can create a class that inherits from `torch.nn.Module` and the define the different elements of the network in the constructor and the forward pass in the `forward` method. You can use the matrix multiplication operation `torch.matmul` to calculate the weighted sum of the inputs and the bias. \n",
+    "\n",
+    "[Note: although the equations above use the sigmoid function as the activation function, we will not apply it within the model. Instead, we will apply it later when calculating the loss]"
    ]
   },
   {
@@ -76,10 +79,12 @@
     "class Perceptron(nn.Module):\n",
     "    def __init__(self, input_size, output_size):\n",
     "        super(Perceptron, self).__init__()\n",
+    "        # INSTRUCTION 1: set the weights and bias of the perceptron\n",
     "        self.W = nn.Parameter(torch.randn(output_size, input_size) * 0.01)\n",
     "        self.b = nn.Parameter(torch.zeros(output_size))\n",
     "\n",
     "    def forward(self, x):\n",
+    "        # INSTRUCTION 2: implement the forward pass of the perceptron\n",
     "        x = torch.matmul(x, self.W.T) + self.b\n",
     "        return x"
    ]
@@ -103,9 +108,12 @@
     "- $\\mathbf{b}^{(1)}$ and $\\mathbf{b}^{(2)}$ are the bias vectors of the first and second layers.\n",
     "- $\\phi$ is the activation function. In this case, we will use the ReLU activation function.\n",
     "- $\\gamma$ is the output activation function. In this case, we will use the sigmoid activation function.\n",
+    "- $\\mathbf{z}$ is called the logit.\n",
     "\n",
     "\n",
-    "Note that if we don't include any non-linear activation functions, the MLP is equivalent to a linear regression model. However, by adding non-linear activation functions, the MLP can learn complex patterns in the data. "
+    "Note that if we don't include any non-linear activation functions, the MLP is equivalent to a linear regression model. However, by adding non-linear activation functions, the MLP can learn complex patterns in the data. \n",
+    "\n",
+    "[Note: although the equations above use the sigmoid function as the activation function, we will not apply it within the model. Instead, we will apply it later when calculating the loss]"
    ]
   },
   {
@@ -121,25 +129,25 @@
     "        self.hidden_size = hidden_size\n",
     "        self.output_size = output_size\n",
     "\n",
-    "        # Initialize weights and biases for the first Linear layer\n",
+    "        # INSTRUCTION 3: set the weights and bias of the MLP\n",
     "        self.W_ih = nn.Parameter(torch.randn(hidden_size, input_size) * 0.01)\n",
     "        self.b_ih = nn.Parameter(torch.zeros(hidden_size))\n",
-    "\n",
-    "        # Initialize weights and biases for the second Linear layer\n",
     "        self.W_ho = nn.Parameter(torch.randn(output_size, hidden_size) * 0.01)\n",
     "        self.b_ho = nn.Parameter(torch.zeros(output_size))\n",
     "\n",
     "    def forward(self, x, non_linear_activation='relu'):\n",
-    "        if non_linear_activation=='relu':\n",
-    "            # Apply the first linear layer with ReLU activation\n",
+    "        \n",
+    "        if non_linear_activation=='':\n",
+    "            # INSTRUCTION 4: apply the first linear layer with no activation function\n",
+    "            h = torch.matmul(x, self.W_ih.T) + self.b_ih\n",
+    "        elif non_linear_activation=='relu':\n",
+    "            # INSTRUCTION 5: apply a ReLU activation function to the hidden layer\n",
     "            h = torch.relu(torch.matmul(x, self.W_ih.T) + self.b_ih)\n",
     "        elif non_linear_activation=='sigmoid':\n",
-    "            # Apply the first linear layer with Sigmoid activation\n",
+    "            # INSTRUCTION 6: apply a sigmoid activation function to the hidden layer\n",
     "            h = torch.sigmoid(torch.matmul(x, self.W_ih.T) + self.b_ih)\n",
-    "        else:\n",
-    "            h = torch.matmul(x, self.W_ih.T) + self.b_ih\n",
-    "\n",
-    "        # Apply the second linear layer\n",
+    "        \n",
+    "        # INSTRUCTION 7: apply the second linear layer\n",
     "        x = torch.matmul(h, self.W_ho.T) + self.b_ho\n",
     "        return x\n"
    ]
@@ -148,7 +156,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generating data"
+    "## Generating data\n",
+    "\n",
+    "We will now generate the data for classification. We will generate two types of data: linearly separable data and non-linearly separable data.\n",
+    "We will also plot the data to visualize it. You will see that the plotting function can call the evaluation function to plot the decision boundary of the model. We will implement this function in the next section."
    ]
   },
   {
@@ -167,13 +178,7 @@
     "                         np.arange(y_min, y_max, 0.01))\n",
     "    grid = torch.tensor(np.c_[xx.ravel(), yy.ravel()], dtype=torch.float32)\n",
     "    if model is not None:\n",
-    "        with torch.no_grad():\n",
-    "            # Get the model's output for the grid points\n",
-    "            Z = model(grid)\n",
-    "            # Apply sigmoid to the output\n",
-    "            Z = torch.sigmoid(Z).numpy()\n",
-    "            # Convert the output to binary\n",
-    "            Z = (Z > 0.5).astype(int)\n",
+    "        Z = evaluate_model(model, grid) \n",
     "        Z = Z.reshape(xx.shape)\n",
     "        plt.contourf(xx, yy, Z, alpha=0.8)\n",
     "    plt.scatter(X[:, 0], X[:, 1], c=Y, edgecolors='k', marker='o')\n",
@@ -228,7 +233,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training"
+    "## Training\n",
+    "\n",
+    "We will now implement the training and evaluating functions. For the training function, we will use the binary cross-entropy loss with logits, which combines the sigmoid activation function and the binary cross-entropy loss. We will use the Stoachastic Gradient Descent (SGD) optimizer to update the weights of the model."
    ]
   },
   {
@@ -237,29 +244,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(model,  X, Y, num_epochs=1000, print_interval=100):\n",
-    "    # Define the loss function and optimizer\n",
+    "def train_model(model,  X, Y, num_epochs=1000, print_interval=100, lr=0.1):\n",
+    "    # INSTRUCTION 8: define the loss function\n",
     "    criterion = nn.BCEWithLogitsLoss()\n",
-    "    optimizer = optim.SGD(model.parameters(), lr=0.1)\n",
+    "    # INSTRUCTION 9: define the optimizer setting the learning rate\n",
+    "    optimizer = optim.SGD(model.parameters(), lr=lr)\n",
     "    for epoch in range(num_epochs):\n",
     "        optimizer.zero_grad()\n",
-    "        # Forward pass\n",
+    "        # INSRTUCTION 10: get the model's output\n",
     "        outputs = model(X)\n",
-    "        # Calculate the loss\n",
+    "        # INSTRUCTION 11: calculate the loss\n",
     "        loss = criterion(outputs, Y.float().view(-1, 1))\n",
-    "        # Backward pass\n",
+    "        # INSTRUCTION 12: backpropagate the loss\n",
     "        loss.backward()\n",
-    "        # Update the weights\n",
+    "        # INSTRUCTION 13: update the model's parameters\n",
     "        optimizer.step()\n",
     "        if (epoch + 1) % print_interval == 0:\n",
-    "            print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}')\n"
+    "            print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}')\n",
+    "\n",
+    "def evaluate_model(model, grid):\n",
+    "    with torch.no_grad():\n",
+    "        # INSTRUCTION 14: get the model's output\n",
+    "        Z = model(grid)\n",
+    "        # INSRTUCTION 15: apply the sigmoid function to the output\n",
+    "        Z = torch.sigmoid(Z).numpy()\n",
+    "        # INSTRUCTION 16: binarize the output\n",
+    "        Z = (Z > 0.5).astype(int)\n",
+    "    return Z"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing the models"
+    "## Testing the models\n",
+    "\n",
+    "Let's test the models you have implemented. We will train the models on the linearly separable data and non-linearly separable data and evaluate their performance. We will also plot the decision boundary of the models to visualize how they separate the data."
    ]
   },
   {
