--- a/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
+++ b/4-recurrent_neural_networks/tutorial_4_models-solutions.ipynb
@@ -123,27 +123,27 @@
    "outputs": [],
    "source": [
     "class MLP(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, output_size):\n",
+    "    def __init__(self, input_size, hidden_size, output_size, non_linear_activation='relu'):\n",
     "        super(MLP, self).__init__()\n",
     "        self.input_size = input_size\n",
     "        self.hidden_size = hidden_size\n",
     "        self.output_size = output_size\n",
-    "\n",
+    "        self.nla = non_linear_activation\n",
     "        # INSTRUCTION 3: set the weights and bias of the MLP\n",
     "        self.W_ih = nn.Parameter(torch.randn(hidden_size, input_size) * 0.01)\n",
     "        self.b_ih = nn.Parameter(torch.zeros(hidden_size))\n",
     "        self.W_ho = nn.Parameter(torch.randn(output_size, hidden_size) * 0.01)\n",
     "        self.b_ho = nn.Parameter(torch.zeros(output_size))\n",
     "\n",
-    "    def forward(self, x, non_linear_activation='relu'):\n",
+    "    def forward(self, x):\n",
     "        \n",
-    "        if non_linear_activation=='':\n",
+    "        if self.nla=='':\n",
     "            # INSTRUCTION 4: apply the first linear layer with no activation function\n",
     "            h = torch.matmul(x, self.W_ih.T) + self.b_ih\n",
-    "        elif non_linear_activation=='relu':\n",
+    "        elif self.nla=='relu':\n",
     "            # INSTRUCTION 5: apply a ReLU activation function to the hidden layer\n",
     "            h = torch.relu(torch.matmul(x, self.W_ih.T) + self.b_ih)\n",
-    "        elif non_linear_activation=='sigmoid':\n",
+    "        elif self.nla=='sigmoid':\n",
     "            # INSTRUCTION 6: apply a sigmoid activation function to the hidden layer\n",
     "            h = torch.sigmoid(torch.matmul(x, self.W_ih.T) + self.b_ih)\n",
     "        \n",
@@ -279,7 +279,12 @@
    "source": [
     "## Testing the models\n",
     "\n",
-    "Let's test the models you have implemented. We will train the models on the linearly separable data and non-linearly separable data and evaluate their performance. We will also plot the decision boundary of the models to visualize how they separate the data."
+    "Let's test the models you have implemented. We will train the models on the linearly separable data and non-linearly separable data and evaluate their performance. We will also plot the decision boundary of the models to visualize how they separate the data.\n",
+    "Things you can play with:\n",
+    "- The number of neurons in the hidden layer of the MLP.\n",
+    "- The learning rate of the optimizer.\n",
+    "- The activation function of the hidden layer of the MLP.\n",
+    "- The number of epochs for training."
    ]
   },
   {
@@ -288,6 +293,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hidden_size = 2  # number of neurons in the hidden layer\n",
+    "lr = 0.1  # learning rate\n",
+    "non_linear_activation = 'relu'  # activation function for the hidden layer\n",
+    "num_epochs = 1000  # number of training epochs\n",
+    "\n",
     "# Task 1: Linearly Separate Two Clouds of Dots\n",
     "X_linear, Y_linear = generate_linear_data()\n",
     "input_size = 2\n",
@@ -295,13 +305,13 @@
     "\n",
     "# Perceptron\n",
     "model_perceptron = Perceptron(input_size, output_size)\n",
-    "train_model(model_perceptron, X_linear, Y_linear, num_epochs=1000, print_interval=100)\n",
+    "train_model(model_perceptron, X_linear, Y_linear, num_epochs=num_epochs, lr=lr, print_interval=100)\n",
     "plot_decision_boundary(X_linear, Y_linear, 'Perceptron - Linear Data', model=model_perceptron)\n",
     "\n",
     "# MLP\n",
-    "hidden_size = 2\n",
-    "model_mlp = MLP(input_size, hidden_size, output_size)\n",
-    "train_model(model_mlp, X_linear, Y_linear, num_epochs=1000, print_interval=100)\n",
+    "model_mlp = MLP(input_size, hidden_size, output_size,\n",
+    "                 non_linear_activation=non_linear_activation)\n",
+    "train_model(model_mlp, X_linear, Y_linear, num_epochs=num_epochs, lr=lr, print_interval=100)\n",
     "plot_decision_boundary(X_linear, Y_linear, 'MLP - Linear Data', model=model_mlp)\n",
     "\n",
     "# Task 2: XOR Task\n",
@@ -309,12 +319,13 @@
     "\n",
     "# Perceptron\n",
     "model_perceptron = Perceptron(input_size, output_size)\n",
-    "train_model(model_perceptron, X_xor, Y_xor, num_epochs=10000, print_interval=1000)\n",
+    "train_model(model_perceptron, X_xor, Y_xor, num_epochs=num_epochs, lr=lr, print_interval=1000)\n",
     "plot_decision_boundary(X_xor, Y_xor, 'Perceptron - XOR Data', model=model_perceptron)\n",
     "\n",
     "# MLP\n",
-    "model_mlp = MLP(input_size, hidden_size, output_size)\n",
-    "train_model(model_mlp, X_xor, Y_xor, num_epochs=10000, print_interval=1000)\n",
+    "model_mlp = MLP(input_size, hidden_size, output_size,\n",
+    "                 non_linear_activation=non_linear_activation)\n",
+    "train_model(model_mlp, X_xor, Y_xor, num_epochs=num_epochs, lr=lr, print_interval=1000)\n",
     "plot_decision_boundary(X_xor, Y_xor, 'MLP - XOR Data', model=model_mlp)"
    ]
   }
